fix the sidebarTitle get too wide on the large screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,9 +82,7 @@ header {
     transition: 0.3s;
 }
 
-#sidebarTitle {
-    width: 100%;
-}
+
 
 .navigation-list {
     display: block;
